# LearnOpenXR

./: .gitmodules  CopyProject.ps1  README.md
Ch00_BaseProject/: CMakeLists.txt  README.md  gradle.properties  settings.gradle
Ch00_BaseProject/app/: build.gradle
Ch00_BaseProject/app/src/main/: AndroidManifest.xml
Ch00_BaseProject/app/src/main/assets/shaders/: PixelShader.spv  VertexShader.spv
Ch00_BaseProject/app/src/main/cpp/: main.cpp
Ch00_BaseProject/app/src/main/res/values/: strings.xml
Ch00_BaseProject/gradle/wrapper/: gradle-wrapper.properties
Ch01_Introduction/: .gitignore  CMakeLists.txt  gradle.properties  main.cpp  settings.gradle
Ch01_Introduction/app/: build.gradle
Ch01_Introduction/app/src/main/: AndroidManifest.xml
Ch01_Introduction/app/src/main/assets/shaders/: PixelShader.spv  VertexShader.spv
Ch01_Introduction/app/src/main/cpp/: main.cpp
Ch01_Introduction/app/src/main/cpp/OpenXRTutorial/: OpenXRTutorial.cpp
Ch01_Introduction/app/src/main/res/values/: strings.xml
Ch02_DevelopmentEnvironment/: CMakeLists.txt  settings.gradle
Ch02_DevelopmentEnvironment/app/: build.gradle
Ch02_DevelopmentEnvironment/app/src/main/: AndroidManifest.xml
Ch02_DevelopmentEnvironment/app/src/main/assets/shaders/: PixelShader.spv  VertexShader.spv
Ch02_DevelopmentEnvironment/app/src/main/cpp/: main.cpp
Ch02_DevelopmentEnvironment/app/src/main/cpp/Application/: OpenXRTutorial.cpp
Ch02_DevelopmentEnvironment/app/src/main/res/values/: strings.xml
Ch02_OpenXRSetup/: CMakeLists.txt  settings.gradle
Ch02_OpenXRSetup/app/: build.gradle
Ch02_OpenXRSetup/app/src/main/: AndroidManifest.xml
Ch02_OpenXRSetup/app/src/main/cpp/: main.cpp
Ch02_OpenXRSetup/app/src/main/cpp/OpenXRTutorial/: OpenXRTutorial.cpp  OpenXRTutorial.h  OpenXRTutorial_Android.cpp
Ch02_OpenXRSetup/app/src/main/res/values/: strings.xml
Ch03_Graphics/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  gradle.properties  settings.gradle
Ch03_Graphics/app/: build.gradle
Ch03_Graphics/app/src/main/: AndroidManifest.xml
Ch03_Graphics/app/src/main/assets/shaders/: PixelShader.spv  VertexShader.spv
Ch03_Graphics/app/src/main/cpp/: main.cpp
Ch03_Graphics/app/src/main/cpp/Application/: OpenXRTutorial.cpp  OpenXRTutorial_Android.cpp  OpenXRTutorial_Windows.cpp
Ch03_OpenXRCore/: .gitignore  CMakeLists.txt  settings.gradle
Ch03_OpenXRCore/app/: build.gradle
Ch03_OpenXRCore/app/src/main/: AndroidManifest.xml
Ch03_OpenXRCore/app/src/main/assets/shaders/: VertexShader.spv
Ch03_OpenXRCore/app/src/main/cpp/: main.cpp
Ch03_OpenXRCore/app/src/main/cpp/Application/: OpenXRTutorial.cpp  OpenXRTutorial.h
Ch03_OpenXRCore/app/src/main/cpp/OpenXR/: OpenXRCoreMgr.cpp  OpenXRCoreMgr.h
Ch03_OpenXRCore/app/src/main/res/values/: strings.xml
Ch04_OpenXRSessionCreation/: CMakeLists.txt  settings.gradle
Ch04_OpenXRSessionCreation/app/: build.gradle
Ch04_OpenXRSessionCreation/app/src/main/: AndroidManifest.xml
Ch04_OpenXRSessionCreation/app/src/main/cpp/: main.cpp
Ch05_OpenXRSessionLifecycle/: CMakeLists.txt  settings.gradle
Ch05_OpenXRSessionLifecycle/app/: build.gradle
Ch05_OpenXRSessionLifecycle/app/src/main/: AndroidManifest.xml
Ch05_OpenXRSessionLifecycle/app/src/main/cpp/: main.cpp
Ch06_OpenXRFrameSubmissionPipeline/: CMakeLists.txt  settings.gradle
Ch06_OpenXRFrameSubmissionPipeline/app/: build.gradle
Ch06_OpenXRFrameSubmissionPipeline/app/src/main/: AndroidManifest.xml
Ch06_OpenXRFrameSubmissionPipeline/app/src/main/cpp/: main.cpp
Ch07_SceneRendering/: CMakeLists.txt  settings.gradle
Ch07_SceneRendering/app/: build.gradle
Ch07_SceneRendering/app/src/main/: AndroidManifest.xml
Ch07_SceneRendering/app/src/main/assets/shaders/: PixelShader.spv  VertexShader.spv
Ch07_SceneRendering/app/src/main/cpp/: main.cpp
Ch07_SceneRendering/app/src/main/cpp/Application/: OpenXRTutorial.cpp  OpenXRTutorial.h  OpenXRTutorial_Android.cpp
Ch07_SceneRendering/app/src/main/cpp/Engine/Components/Core/: Transform.cpp  Transform.h
Ch07_SceneRendering/app/src/main/cpp/Engine/Components/OpenXR/: XRHmdDriver.h
Ch07_SceneRendering/app/src/main/cpp/Engine/Components/Rendering/: Camera.cpp  Camera.h  Material.cpp  MeshRenderer.cpp  ObjectRenderData.h
Ch07_SceneRendering/app/src/main/cpp/Engine/Components/XRDevices/: XRHmdDriver.cpp
Ch07_SceneRendering/app/src/main/cpp/Engine/Core/: GameObject.cpp  GameObject.h  IComponent.h  Scene.cpp  Scene.h
Ch07_SceneRendering/app/src/main/cpp/Engine/Rendering/: Material.cpp  Shader.cpp  Shader.h
Ch07_SceneRendering/app/src/main/cpp/Engine/Rendering/Mesh/: CubeMesh.cpp  IMesh.h
Ch07_SceneRendering/app/src/main/cpp/OpenXR/: OpenXRCoreMgr.cpp  OpenXRDisplayMgr.cpp  OpenXRDisplayMgr.h  OpenXRRenderMgr.cpp  OpenXRSessionMgr.cpp  OpenXRSessionMgr.h  OpenXRSpaceMgr.h
Ch07_SceneRendering/app/src/main/cpp/OpenXR/OpenXRDisplay/: RenderLayerInfo.h  SwapchainConfig.h
Ch07_SceneRendering/app/src/main/cpp/OpenXR/OpenXRGraphicsAPI/: OpenXRGraphicsAPI.h  OpenXRGraphicsAPI_Vulkan.h
Ch07_SceneRendering/app/src/main/cpp/Scenes/: TableFloorScene.cpp  TableFloorScene.h
Ch07_SceneRendering/app/src/main/cpp/ScenesRendering/: TableFloorScene.cpp
Ch07_SceneRendering/app/src/main/cpp/ScenesRendering/Rendering/: Material.cpp
Ch07_SceneRendering/app/src/main/cpp/ScenesRendering/Scenes/: SceneRenderer.cpp
Ch07_SceneRendering/app/src/main/res/values/: strings.xml
Ch08_OpenXRInputAndHaptics/: CMakeLists.txt  Ch07_OpenXR_Engine.md  debug_cube_analysis.txt  debug_cube_vertices.txt  settings.gradle
Ch08_OpenXRInputAndHaptics/app/: build.gradle
Ch08_OpenXRInputAndHaptics/app/src/main/: AndroidManifest.xml
Ch08_OpenXRInputAndHaptics/app/src/main/cpp/: main.cpp
Common/: EnumToString.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsAPI_Vulkan.cpp  GraphicsAPI_Vulkan.h  OpenXRHelper.h  XRMathUtils.cpp  XRMathUtils.h  XrPathUtils.cpp  XrPathUtils.h  xr_linear_algebra.h
Graphics_Bakcup/: CMakeLists.txt
Graphics_Bakcup/app/src/main/cpp/: OpenXRRenderer.cpp  OpenXRRenderer.h  main.cpp
Shaders/: PixelShader.glsl  VertexShader.glsl
(+152 files in other folders)
